--- a/_posts/2022-05-22-JAVA.md
+++ b/_posts/2022-05-22-JAVA.md
@@ -1,4 +1,107 @@
 JAVA 知识点
 ---
 
-### OOM 分析
+## OOM 分析
+
+### 堆溢出
+
+Java堆用于存储对象实例，只要不断地创建对象，并且保证GC Roots到对象之间有可达路径来避免垃圾回收机制清除这些对象，那么在对象数量到达最大堆的容量限制后就会产生内存溢出异常。
+
+#### 原因
+
+- 无法在 JAVA 堆中分配对象。
+- 应用程序保存了无法被 GC 回收的对象。
+- 应用程序过度使用 finalizer
+
+#### 排查解决思路
+
+1. 查找关键报错信息， 如
+
+```
+   java.lang.OutOfMemoryError: Java heap space
+```
+
+2. 使用内存映像分析工具（如 Eclipsc Memory Analyzer 或者 Jprofiler）对Dump出来的堆储存快照进行分析，分析清楚是内存泄漏还是内存溢出。
+
+3. 如果是内存泄漏，可进一步通过工具查看泄漏对象到GC Roots的引用链，修复应用程序中的内存泄漏。
+
+4. 如果不存在泄漏，先检查代码是否有死循环，递归等，再考虑用 -Xmx 增加堆大小。
+
+### 栈溢出
+
+虚拟机栈和本地方法栈：
+
+- 如果线程请求的栈深度大于虚拟机所允许的深度，将抛出 StackOverflowError 异常；
+- 如果虚拟机栈可以动态扩展，当扩展时无法申请到足够的内存时会抛出 OutOfMemoryError 异常。
+
+#### 原因
+- 在单个线程下，栈帧太大，或者虚拟机栈容量太小，当内存无法分配的时候，虚拟机抛出StackOverflowError 异常。
+- 断地建立线程的方式会导致内存溢出。
+
+#### 排查解决思路
+
+1. 查找关键报错信息，确定是 StackOverflowError 还是 OutOfMemoryError
+
+2. 如果是 StackOverflowError，检查代码是否递归调用方法等
+
+3. 如果是 OutOfMemoryError，检查是否有死循环创建线程等，通过-Xss降低的每个线程栈大小的容量
+
+### 方法区溢出
+
+方法区，（又叫永久代，JDK8 后，元空间替换了永久代），用于存放 Class 的相关信息，如类名、访问修饰符、常量池、字段描述、方法描述等。运行时产生大量的类，会填满方法区，造成溢出。
+
+#### 溢出原因
+- 使用 CGLib 生成了大量的代理类，导致方法区被撑爆
+
+- 在 Java7 之前，频繁的错误使用 String.intern 方法
+
+- 大量 jsp 和动态产生 jsp
+
+- 应用长时间运行，没有重启
+
+#### 排查解决思路
+- 检查是否永久代空间设置得过小
+
+- 检查代码是否频繁错误得使用 String.intern 方法
+
+- 检查是否跟 jsp 有关。
+
+- 检查是否使用 CGLib 生成了大量的代理类
+
+- 重启大法，重启 JVM
+
+### 本机直接内存溢出
+直接内存并不是虚拟机运行时数据区的一部分，也不是 Java 虚拟机规范中定义的内存区域。但是，这部分内存也被频繁地使用，而且也可能导致OOM。
+
+在 JDK1.4 中新加入了 NIO(New Input/Output) 类，它可以使用 native 函数库直接分配堆外内存，然后通过一个存储在Java堆中的 DirectByteBuffer 对象作为这块内存的引用进行操作。这样能在一些场景中显著提高性能，因为避免了在 Java 堆和 Native 堆中来回复制数据。
+
+#### 原因
+
+- 本机直接内存的分配虽然不会受到 Java 堆大小的限制，但是受到本机总内存大小限制。
+
+- 直接内存由 -XX:MaxDirectMemorySize 指定，如果不指定，则默认与Java堆最大值（-Xmx指定）一样。
+
+- NIO程序中，使用ByteBuffer.allocteDirect(capability)分配的是直接内存，可能导致直接内存溢出。
+
+#### 排查
+
+- 检查代码是否恰当
+
+- 检查JVM参数-Xmx，-XX:MaxDirectMemorySize 是否合理。
+
+### GC overhead limit exceeded
+
+这个是JDK6新加的错误类型，一般都是堆太小导致的。
+
+Sun 官方对此的定义：超过98%的时间用来做GC并且回收了不到2%的堆内存时会抛出此异常。
+
+#### 解决方案
+
+- 检查项目中是否有大量的死循环或有使用大内存的代码，优化代码。
+
+- 检查JVM参数-Xmx -Xms是否合理
+
+- dump内存，检查是否存在内存泄露，如果没有，加大内存。
+
+
+
