--- a/_posts/2022-05-22-JAVA.md
+++ b/_posts/2022-05-22-JAVA.md
@@ -105,3 +105,126 @@ Sun 官方对此的定义：超过98%的时间用来做GC并且回收了不到2%
 
 
 
+## String
+
+### 1. new String() 和 直接赋值
+
+String 类型有一个自己的对象池； 对于直接赋值创建的对象，他们都被放入对象池中，以后每次创建的时候都回去检查对象池中是否存在，如果存在直接引用，没有就在创建一个对象； 对于 new 的对象，每次都会在堆内存中创建一个 string 对象，无论堆中是否存在，并且不会放入到对象池中。所以采用 new 方式创建非常耗内存。
+
+
+### 2. String 使用 ‘+’ 连接字符串
+
+```java
+    String a1 = “abcd”;
+    String a2 = "abcd";
+    
+    String a3 = "ab";
+    a3 += "cd";
+    
+    System.out.println(a1==a2);   //true  这个问题一已经验证
+
+    System.out.println(a3==a2);   //false 这个是为什么呢？
+```
+
+```java
+/** The Java language provides special support for the string concatenation operator ( + ), and for conversion
+of other objects to strings. String concatenation is implemented through the StringBuilder(or StringBuffer)
+class and its append method. String conversions are implemented through the method toString, defined
+by Object and inherited by all classes in Java. For additional information on string concatenation and conversion,
+see Gosling, Joy, and Steele, The Java Language Specification.*/
+```
+
+
+String 类型对象使用 “+” 进行拼接，是通过 StringBuilder(or StringBuffer) 的 append() 方法实现的。 
+
+执行 “+” 操作时，Stirng 对象会将自身构造成 StringBuilder(or StringBuffer) 然后调用 append() 实现拼接，之后调用 StringBuilder(or StringBuffer) 的 toString() 方法返回。
+
+
+StringBuilder
+```java
+    public String toString() {
+        // Create a copy, don't share the array
+        return new String(value, 0, count);
+    }
+```
+
+StringBuffer
+```java
+    public synchronized String toString() {
+        if (toStringCache == null) {
+            toStringCache = Arrays.copyOfRange(value, 0, count);
+        }
+        return new String(toStringCache, true);
+    }
+``` 
+
+toString() 方法会再次创建一个新对象返回。
+
+a3 和 a2 不同，因为 a3 时堆中新建的对象， a2 时对象池中的对象。
+
+‘+’ 操作，要重新创建一个 StringBuilder(or StringBuffer) 对象，然后拼接， 还要再在堆内存中创建一个新对象返回， 因此重复上千次操作后会慢。
+
+
+### 3. String str = new String("Hello") 到底创建了几个对象？
+
+```java
+/**
+     * Initializes a newly created {@code String} object so that it represents
+     * the same sequence of characters as the argument; in other words, the
+     * newly created string is a copy of the argument string. Unless an
+     * explicit copy of {@code original} is needed, use of this constructor is
+     * unnecessary since Strings are immutable.
+     *
+     * @param  original
+     *         A {@code String}
+     */
+    public String(String original) {
+        this.value = original.value;
+        this.hash = original.hash;
+    }
+```
+
+用 new String(String original) 创建一个对象，就是对 original 参数的一份拷贝，这样在执行的时候确实创建了两个对象，因为在向方法传参的时候已经在对象池中创建了一个对象 original ；另一个对象是用 new 方法创建在堆内存中。所以语句执行的时候应该是创建了两个对象，一个在 String 串池中，一个在堆内存中。
+![String 创建对象](./assets/2022-05-22-JAVA-1662345057911.png)
+
+根据 java 垃圾回收机制，在串池中的对象由于没有变量指向它，应该被标为垃圾，它对于程序已经无用了，也不可能再用。所以语句在执行的时候确实创建了两个对象，但参数对象立即被视为垃圾。
+
+
+### 4.单独的"str"是不是对象
+
+不是。
+原因： 
+1. 
+    ```java
+        String  a1 ="abcd";
+        
+        String  a2 ="ab"+"cd";
+        
+        String  a3 ="ab";
+        
+        a3 =a3+"cd";
+        
+        System.out.println(a2==a1);  //true
+            
+        System.out.println(a3==a1);   //false   
+    ```
+    如果单独的 “ab” 是一个对象，那么用 “ab” 连接 “cd” 应该和用 a3 连接 “cd” 结果是一样的。
+
+2.
+    如果单独的“str”是一个对象的话，那么下面的语句都应该被编译器所接受：
+    ```java
+        new Integer(2);
+        new Date();
+        str";    //error: "str" 不是语句
+    ```
+
+
+
+
+
+
+
+
+
+
+
