--- a/_posts/2022-09-05-简历投递.md
+++ b/_posts/2022-09-05-简历投递.md
@@ -3,8 +3,7 @@
 
 
 | 国企央企银行 | 网址 | 时间  | 投递时间 |
-| :---: | :---: | :---: | :---: | 
-| 中国联通 |  |  |
+| :---: | :---: | :---: | :---: |
 | 中国联通 | http://zglt2022.zhaopin.com/ |  | 2022-09-08 |
 | 宁波银行 | https://zhaopin.nbcb.com.cn/#/campus-recruitment | 2022-09-13 - 2022-11-18 | 2022-09-06 |
 | 农业银行 | https://career.abchina.com/build/index.html#/99 |  | 2022-09-06 |
@@ -13,6 +12,7 @@
 | 中国邮储银行 | http://psbc2023.zhaopin.com/cl.html?comid=1282144 |  | 2022-09-06 |
 | 中信银行 | https://www.hotjob.cn/wt/chinaciticbank/web/index/campus |  | 2022-09-08 |
 | 交通银行 | https://job.bankcomm.com/queryPosition.do | 2022-09-13 - 2022-10-16 | 2022-09-08 |
+| 建设银行 | http://job1.ccb.com/cn/job/plan_index.html?planType=XY | 2022-09-13 - 2022-10-16 | 2022-09-08 |
 
 
 
@@ -22,6 +22,11 @@
 | 小米 | https://hr.xiaomi.com/ |   |  |
 | 比特大陆 | https://jobs.bitmain.com.cn/jobDetails?id=6aab3514-3095-44e5-911c-9b6fde92302f&module=students | 9月7日之前网申，软件研发类免笔试！ |  |
 | 360 | http://360campus.zhiye.com/jobs |  |  |
+
+
+
+
+
 
 
 
