--- a/_posts/2022-09-05-简历投递.md
+++ b/_posts/2022-09-05-简历投递.md
@@ -4,7 +4,7 @@
 
 | 国企央企银行 | 网址 | 时间  | 投递时间 |
 | :---: | :---: | :---: | :---: |
-| 中国联通 | http://zglt2022.zhaopin.com/ |  | 2022-09-08 |
+| 中国联通 | [http://zglt2022.zhaopin.com/](http://zglt2022.zhaopin.com/) |  | 2022-09-08 |
 | 宁波银行 | https://zhaopin.nbcb.com.cn/#/campus-recruitment | 2022-09-13 - 2022-11-18 | 2022-09-06 |
 | 农业银行 | https://career.abchina.com/build/index.html#/99 |  | 2022-09-06 |
 | 九江银行 | https://www.hotjob.cn/wt/JJYH/web/index/campus |  | 2022-09-06  |
