--- a/_posts/2022-09-05-简历投递.md
+++ b/_posts/2022-09-05-简历投递.md
@@ -13,6 +13,7 @@
 | 中信银行 | https://www.hotjob.cn/wt/chinaciticbank/web/index/campus |  | 2022-09-08 |
 | 交通银行 | https://job.bankcomm.com/queryPosition.do | 2022-09-13 - 2022-10-16 | 2022-09-08 |
 | 建设银行 | http://job1.ccb.com/cn/job/plan_index.html?planType=XY | 2022-09-13 - 2022-10-16 | 2022-09-08 |
+| 国家电网南瑞集团 | http://job.sgepri.sgcc.com.cn/nari-career-ui/schoolrecurit?pageNum=1 | 2022-09-13 - 2022-10-16 | 2022-09-08 |
 
 
 
