--- a/_posts/2022-09-05-简历投递.md
+++ b/_posts/2022-09-05-简历投递.md
@@ -14,11 +14,13 @@
 | 交通银行 | https://job.bankcomm.com/queryPosition.do | 2022-09-13 - 2022-10-16 | 2022-09-08 |
 | 建设银行 | http://job1.ccb.com/cn/job/plan_index.html?planType=XY | 2022-09-13 - 2022-10-16 | 2022-09-08 |
 | 国家电网南瑞集团 | http://job.sgepri.sgcc.com.cn/nari-career-ui/schoolrecurit?pageNum=1 | 2022-09-13 - 2022-10-16 | 2022-09-08 |
+| 中国银行 | [中国银行2023年全球校园招聘 (chinahr.com)](https://campus.chinahr.com/pages/2023-boc/#/jobs) |  |  |
+| 浦发银行 | https://spdb.zhaopin.com/ | 2022年9月9日 10 : 00 - 10月13日 18 ：00 | 2022-09-10 |
 
 
 
 | 其他公司 | 网址 | 时间  | 投递时间 |
-| :---: | :---: | :---: | :---: | 
+| :---: | :---: | :---: | :---: |
 | 三一重工 | http://sanycampus.zhiye.com/campus |   | 2022-09-07 |
 | 小米 | https://hr.xiaomi.com/ |   |  |
 | 比特大陆 | https://jobs.bitmain.com.cn/jobDetails?id=6aab3514-3095-44e5-911c-9b6fde92302f&module=students | 9月7日之前网申，软件研发类免笔试！ |  |
